--- a/pages/9687.html
+++ b/pages/9687.html
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussion/4900/#Item_5" title="Discuss this page in its dedicated thread on the nForum" style="color: black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -471,7 +469,7 @@ margin-left: 0em;
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of †-compact categories</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/finite+quantum+mechanics+in+terms+of+dagger-compact+categories'>in terms of ∞-compact categories</a></p>
 </li>
 
 <li>
@@ -1097,7 +1095,7 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#formalizations'>Formalizations</a><ul><li><a href='#in__supersymmetric_yangmills_theory'>In <math class='maruku-mathml' display='inline' id='mathml_f69aa25f1f1e6943aeb220a9e7c595c483f94ffa_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> supersymmetric Yang-Mills theory</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#ReferencesInYangMillsTheory'>In Yang-Mills theory</a><ul><li><a href='#general'>General</a></li><li><a href='#ViaMonopoleCondensation'>Via monopole condensation</a></li></ul></li><li><a href='#interacting_field_vacuum'>Interacting field vacuum</a></li><li><a href='#ReferencesInSuperYangMillsTheory'>In super-Yang-Mills theory</a></li><li><a href='#under_the_adscft_correspondence'>Under the AdS/CFT correspondence</a></li></ul></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#formalizations'>Formalizations</a><ul><li><a href='#in__supersymmetric_yangmills_theory'>In <math class='maruku-mathml' display='inline' id='mathml_8bcbcb76ec9fa3ac0bca46cc081f7598746a3c32_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> supersymmetric Yang-Mills theory</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a><ul><li><a href='#ReferencesInYangMillsTheory'>In Yang-Mills theory</a><ul><li><a href='#general'>General</a></li><li><a href='#ViaMonopoleCondensation'>Via monopole condensation</a></li></ul></li><li><a href='#interacting_field_vacuum'>Interacting field vacuum</a></li><li><a href='#ReferencesInSuperYangMillsTheory'>In super-Yang-Mills theory</a></li><li><a href='#under_the_adscft_correspondence'>Under the AdS/CFT correspondence</a></li></ul></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>Confinement (e.g <a href='#Espiru94'>Espiru 94</a>) is the (expected) phenomenon in <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a>/<a class='existingWikiWord' href='/nlab/show/QCD'>QCD</a> that <a class='existingWikiWord' href='/nlab/show/quark'>quark</a>-excitations must form <a class='existingWikiWord' href='/nlab/show/bound+state'>bound states</a> which are neutral under the color charge – such as the <a class='existingWikiWord' href='/nlab/show/hadron'>hadrons</a> (<a class='existingWikiWord' href='/nlab/show/proton'>protons</a>, <a class='existingWikiWord' href='/nlab/show/neutron'>neutrons</a>) and <a class='existingWikiWord' href='/nlab/show/meson'>mesons</a>.</p>
@@ -1106,7 +1104,7 @@ margin-left: 0em;
 
 <h2 id='formalizations'>Formalizations</h2>
 
-<h3 id='in__supersymmetric_yangmills_theory'>In <math class='maruku-mathml' display='inline' id='mathml_f69aa25f1f1e6943aeb220a9e7c595c483f94ffa_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> supersymmetric Yang-Mills theory</h3>
+<h3 id='in__supersymmetric_yangmills_theory'>In <math class='maruku-mathml' display='inline' id='mathml_8bcbcb76ec9fa3ac0bca46cc081f7598746a3c32_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>N</mi><mo>=</mo><mn>2</mn></mrow><annotation encoding='application/x-tex'>N=2</annotation></semantics></math> supersymmetric Yang-Mills theory</h3>
 
 <p>While confinement in plain <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> is still waiting for mathematical formalization and <a class='existingWikiWord' href='/nlab/show/proof'>proof</a> (see <a href='#JaffeWitten'>Jaffe-Witten</a>), there is a variant of <a class='existingWikiWord' href='/nlab/show/Yang-Mills+theory'>Yang-Mills theory</a> with more <a class='existingWikiWord' href='/nlab/show/symmetry'>symmetry</a> where the phenomenon has been demonstrated, namely in <a class='existingWikiWord' href='/nlab/show/N%3D2+D%3D4+super+Yang-Mills+theory'>N=2 D=4 super Yang-Mills theory</a> (<a href='#SeibergWitten94'>Seiberg-Witten 94</a>).</p>
 
@@ -1184,6 +1182,12 @@ margin-left: 0em;
 <li id='Rafelski90'><a class='existingWikiWord' href='/nlab/show/Johann+Rafelski'>Johann Rafelski</a>, <em>Vacuum structure – An Essay</em>, in pages 1-29 of H. Fried, Berndt Müller (eds.) <em>Vacuum Structure in Intense Fields</em>, Plenum Press 1990 (<a href='https://books.google.de/books?id=5uXcBwAAQBAJ&amp;pg=PA14&amp;lpg=PA14&amp;dq=confinement+%22interacting+vacuum%22&amp;source=bl&amp;ots=xPGYJ-JOc-&amp;sig=AoYbqWQeNRMg6hMSRZjJ3nzq8B0&amp;hl=en&amp;sa=X&amp;ved=0ahUKEwjIgK68-tnYAhVCESwKHThMDykQ6AEIKTAA#v=onepage&amp;q=confinement%20%22interacting%20vacuum%22&amp;f=false'>GBooks</a>)</li>
 </ul>
 
+<p>See also</p>
+
+<ul>
+<li id='Simonov18'>Yu. A. Simonov, <em>What is the confinement mechanism in QCD?</em> (<a href='https://arxiv.org/abs/1804.08946'>arXiv:1804.08946</a>)</li>
+</ul>
+
 <h3 id='ReferencesInSuperYangMillsTheory'>In super-Yang-Mills theory</h3>
 
 <p>Confinement in <a class='existingWikiWord' href='/nlab/show/N%3D2+D%3D4+super+Yang-Mills+theory'>N=2 D=4 super Yang-Mills theory</a> by a version of the monopole condensation of (<a href='#Hooft75'>t Hooft 75</a>, <a href='#Mandelstam76'>Mandelstam 76</a>) was demonstrated in</p>
@@ -1225,19 +1229,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 15, 2018 07:33:43 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  <p>
+  Last revised on April 27, 2018 at 10:10:52.
+  See the <a href="https://ncatlab.org/nlab/history/confinement" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/confinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/confinement/11" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(11 revisions)</span> | <a href="/nlab/show/diff/confinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/confinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/confinement" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/confinement/12" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(12 revisions)</span> | <a href="/nlab/show/diff/confinement" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/confinement" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/confinement/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/confinement" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/confinement" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/confinement" id="view_source" rel="nofollow">Source</a>
