--- a/pages/16934.html
+++ b/pages/16934.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -290,12 +290,10 @@ margin-left: 0em;
 
 <div class="navigation">
     <span class="skipNav"><a href='#navEnd'>Skip the Navigation Links</a> | </span>
-    <a href="/nlab/show/HomePage" accesskey="H" title="Home, Sweet Home">Home Page</a> | 
-    <a href="/nlab/list" accesskey="A" title="Alphabetically sorted list of pages">All Pages</a> | 
-    <a href="/nlab/latest_revisions" accesskey="U" title="View latest revisions on this web">Latest Revisions</a> |
-    <a href="/nlab/authors" title="Who wrote what">Authors</a> | 
-    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> | 
-    <a href="/nlab/export" accesskey="X" title="Download a zip with all the pages in this wiki">Export</a> |
+    <a href="/nlab/show/HomePage" accesskey="H" title="Home page">Home Page</a> |
+    <a href="/nlab/latest_revisions" accesskey="U" title="Latest edits and page creations">Latest Revisions</a> |
+    <a href="https://nforum.ncatlab.org/discussions/?CategoryID=0" title="Discuss this page on the nForum. It does not yet have a dedicated thread; feel free to create one, giving it the same name as the title of this page" style="color:black">Discuss this page</a> |
+    <a href="/nlab/feeds" title="Subscribe to changes by Atom">Feeds</a> |
 <form accept-charset="utf-8" action="/nlab/search" id="navigationSearchForm" method="get">      <fieldset class="search"><input type="text" id="searchField" name="query" value="Search"
              onfocus="this.value == 'Search' ? this.value = '' : true"
              onblur="this.value == '' ? this.value = 'Search' : true" /></fieldset>
@@ -590,7 +588,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>on <a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a> and <a class='existingWikiWord' href='/nlab/show/duality+in+string+theory'>duality in string theory</a> via consideration of <a class='existingWikiWord' href='/nlab/show/BPS+state'>BPS states</a>.</p>
+<p>on <a class='existingWikiWord' href='/nlab/show/M-theory'>M-theory</a> and <a class='existingWikiWord' href='/nlab/show/duality+in+string+theory'>duality in string theory</a> via consideration of <a class='existingWikiWord' href='/nlab/show/BPS+state'>BPS states</a>, specifically establishing evidence for <a class='existingWikiWord' href='/nlab/show/duality+between+M-theory+and+type+IIA+string+theory'>duality between M-theory and type IIA string theory</a>.</p>
 
 <p>A public talk announcing the conjecture that the <a class='existingWikiWord' href='/nlab/show/non-perturbative+quantum+field+theory'>strong-coupling limit</a> of <a class='existingWikiWord' href='/nlab/show/type+II+string+theory'>type IIA string theory</a> is <a class='existingWikiWord' href='/nlab/show/11-dimensional+supergravity'>11-dimensional supergravity</a> <a class='existingWikiWord' href='/nlab/show/Kaluza-Klein+mechanism'>KK-compactified</a> on a circle is at 15:12 in</p>
 
@@ -603,10 +601,10 @@ margin-left: 0em;
 <p>The term “M-theory” seems to originate in</p>
 
 <ul>
-<li id='HoravaWitten95'><a class='existingWikiWord' href='/nlab/show/Petr+Ho%C5%99ava'>Petr Hořava</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Heterotic and Type I string dynamics from eleven dimensions</em>, Nucl. Phys. B460 (1996) 506 (<a href='http://arxiv.org/abs/hep-th/9510209'>arXiv:hep-th/9510209</a>)</li>
+<li id='HoravaWitten95'><a class='existingWikiWord' href='/nlab/show/Petr+Ho%C5%99ava'>Petr Horava</a>, <a class='existingWikiWord' href='/nlab/show/Edward+Witten'>Edward Witten</a>, <em>Heterotic and Type I string dynamics from eleven dimensions</em>, Nucl. Phys. B460 (1996) 506 (<a href='http://arxiv.org/abs/hep-th/9510209'>arXiv:hep-th/9510209</a>)</li>
 </ul>
 
-<p>as a “non-committed” shorthand for “membrane theory”</p>
+<p>as a “non-committed” shorthand for “<a class='existingWikiWord' href='/nlab/show/supermembrane'>membrane</a> theory”</p>
 
 <blockquote>
 <p>As it has been proposed that the eleven-dimensional theory is a supermembrane theory but there are some reasons to doubt that interpretation,1 we will non-committally call it the M-theory, leaving to the future the relation of M to membranes. (<a href='#HoravaWitten95'>Hořava-Witten 95, p. 2</a>)</p>
@@ -650,19 +648,20 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 30, 2016 11:32:09 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (195.37.209.183)
+  <p>
+  Last revised on May  2, 2018 at 04:41:00.
+  See the <a href="https://ncatlab.org/nlab/history/String Theory Dynamics In Various Dimensions" style="color: #005c19">history</a> of this page for a list of all contributions to it.
+  </p>
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/String+Theory+Dynamics+In+Various+Dimensions" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/String+Theory+Dynamics+In+Various+Dimensions/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/String+Theory+Dynamics+In+Various+Dimensions" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/String+Theory+Dynamics+In+Various+Dimensions" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
-  
+  <a href="/nlab/edit/String+Theory+Dynamics+In+Various+Dimensions" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/String+Theory+Dynamics+In+Various+Dimensions/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/String+Theory+Dynamics+In+Various+Dimensions" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/String+Theory+Dynamics+In+Various+Dimensions" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  | <a href="https://ncatlab.org/nlab/show/String Theory Dynamics In Various Dimensions/cite" style="color: black">Cite</a>
   <span class="views">
-    | Views: 
+    | Views:
     <a href="/nlab/print/String+Theory+Dynamics+In+Various+Dimensions" accesskey="p" id="view_print" rel="nofollow">Print</a>
-    | 
+    |
     <a href="/nlab/tex/String+Theory+Dynamics+In+Various+Dimensions" id="view_tex" rel="nofollow">TeX</a>
     |
     <a href="/nlab/source/String+Theory+Dynamics+In+Various+Dimensions" id="view_source" rel="nofollow">Source</a>
